menu on mobile not fixed, added close tag in App and resolved warnigns

--- a/src/index.css
+++ b/src/index.css
@@ -588,8 +588,9 @@ body {
 .padding-subtitle {
   padding: 0 15px; }
 
-.fixed {
-  position: fixed; }
+@media all and (min-width: 768px) {
+  .fixed {
+    position: fixed; } }
 
 .no-style-button {
   border: none;
